add: docker compose and many fixes

--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,5 @@
 VITE_CUSTOM_CURSOR_HIDE=true
+MONGODB_URL=mongodb://admin:password@localhost:27017/admin
+REDIS_URL=redis://localhost:6379
+PORT=8080
+JWT_SECRET=your-secure-jwt-secret-key-here
