--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "start": "concurrently \"node api/index.js\" \"vite\"",
+    "start": "concurrently \"nodemon api/index.js\" \"vite\"",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
@@ -28,12 +28,14 @@
     "jsonwebtoken": "^9.0.2",
     "leva": "^0.9.35",
     "mongoose": "^8.14.3",
+    "nodemon": "^3.1.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.3.0",
     "react-share": "^5.2.2",
+    "redis": "^5.5.6",
     "room-populate": "^1.0.18",
     "three": "0.153.0",
     "workbox-precaching": "^7.3.0"
