fix: onfido verification page

--- a/.env.development
+++ b/.env.development
@@ -3,3 +3,5 @@ MONGODB_URL=mongodb://admin:password@localhost:27017/admin
 REDIS_URL=redis://localhost:6379
 PORT=8080
 JWT_SECRET=your-secure-jwt-secret-key-here
+ONFIDO_API_TOKEN=api_sandbox.    
+ONFIDO_REGION=EU
