--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "leva": "^0.9.35",
     "mongoose": "^8.14.3",
     "nodemon": "^3.1.10",
+    "onfido-sdk-ui": "^14.50.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
